--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/3/n12921696.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/05/id12922631-GettyImages-1199129374-600x400-2-320x200.jpg"><p align="center">【内幕】复阳频发 国务院和地方各说各话</p></a>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/3/n12921696.md#1" title="【内幕】复阳频发 国务院和地方各说各话""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12922631-GettyImages-1199129374-600x400-2-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/3/13/n12809567.md#1" title="【思想领袖】泽格斯：美青年陷社会主义骗局""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12929848-567f04929b54bbffa0bcf09e27525550-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929380.md#1" title="沙尘暴袭北京等13省市 内蒙数万游客被困""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12929461-shachenbao1-320x200.png">&nbsp;</a>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929199.md#1" title="布林肯：习近平若下令攻台 将犯下严重错误""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/04/id12895628-GettyImages-1232406632-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12926907.md#1" title="沈舟：美军大型实战演习给中共军队上课""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926928-51155093192_f7c0d80bb8_k-320x200.jpg">&nbsp;</a>
@@ -11,19 +12,19 @@
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12928052.md#1" title="美议员提“桥梁法案” 对抗中共一带一路""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928064-GettyImages-1203830481-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12924345.md#1" title="【未解之谜】五台山之谜：清凉胜地的秘密""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12924363-1200x800-3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/3/n12922278.md#1" title="温哥华贺法轮大法洪传29周年 民众纷纷学功""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12922302-01-ADSC02295-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12926515.md#1" title="【内幕】文件曝政法督导组进驻河北细节""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927476-1407152337322320-600x400-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://hbdsrs3314.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12929977.md#1">【直播预告】布林肯与王毅联合国安理会同场交锋</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12929901.md#1">印度疫情何时到顶峰？7大问题一次看懂</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12930088.md#1">在太空中放一年多的葡萄酒 你猜售价多少？</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12930001.md#1">【预告】新世纪力作《抉择》5月7日网络首映</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929584.md#1">【横河观点】报应太快？政法委“点火”成残骸</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12929831.md#1">【翻墙必看】G7外长联合公报令中共跳脚</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12930239.md#1">发帖称青年正睡觉 腾讯公关总监张军惹众怒</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12930095.md#1">新世纪影视最新力作《抉择》今晚7点半 网路首播</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12930298.md#1">洛城缺司机 亚裔开优步每日500美元入袋</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12930116.md#1">帮狱中女友删微信罪证  纽约华男认罪</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12929763.md#1">义乌外贸被冻卡事件 揭业者使用地下钱庄原因</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12929977.md#1">【直播预告】布林肯与王毅联合国安理会同场交锋</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12927242.md#1">中共不敢让老人作重点接种对象 世卫评估道出原因</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12925298.md#1">对文革看法引发中共红二代争执 陶斯亮删文</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12926219.md#1">【微视频】赵婷被中共封杀 另有不为人知原因？</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12927799.md#1">【翻墙必看】分析：4大信号警示习前程凶险</a><br>
+<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12926515.md#1">【内幕】文件曝政法督导组进驻河北细节</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12925383.md#1">被收归国有？蚂蚁集团为央行开发数字人民币</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12927106.md#1">大量外籍人士离港以及经济衰退 香港房租大跌</a><br>
 <br><p align="center"><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
@@ -48,7 +49,6 @@
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12928123.md#1">江苏女商人行贿前河北副省长大秘细节曝光</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929132.md#1">杨威：中共再陷困局 还信“东升西降”？</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929584.md#1">【横河观点】报应太快？政法委“点火”成残骸</a><br>
-<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/3/13/n12809567.md#1">【思想领袖】泽格斯：美青年陷社会主义骗局</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929178.md#1">曾批刘德华不算歌手 杨坤商演现尴尬一幕</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12928917.md#1">【财商天下】人口危机溯源 中国计划生育真相</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929554.md#1">【时事纵横】中共暗布战局？布林肯连发警告</a><br>
@@ -95,15 +95,16 @@
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/3/n12921790.md#1">美国内华达州参议员褒奖世界法轮大法日</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/3/n12921162.md#1">遭17年冤狱 四川法轮功学员钟俊芳含冤离世</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/3/n12921612.md#1">不只弯道超车 中共围剿特斯拉阴谋（下）</a><br>
+<a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/3/n12921502.md#1">【新闻大家谈】拜登慢动作美印生隙？中共搅场</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://123.205.227.232/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 52,634</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://111.255.115.233/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 52,634</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 376,857,361 人
+!共 376,857,872 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929490.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/03/IMG_1158-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929490.md#1">法新社“世纪病毒始于武汉”等文获人权新闻奖</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928498.md#1">中共打压外卖骑士联盟 推“模范外卖员”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926843.md#1">四川大学生家遭强拆 父子睡在废墟上</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926001.md#1">牛腾宇首见母亲曝黑幕 坚信真相会大白天下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926601.md#1">《马三家来信》网上放映会 中共奴工产品再成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924228.md#1">成都近八旬法轮功学员遭冤判两年 劫入监狱</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929183.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/05/GettyImages-1141632111-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929183.md#1">浑水创始人吁除牌中概股 以根除诈欺行为</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928199.md#1">A股三大股指收跌 疫苗股重挫致创指跌2.48%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927932.md#1">38家银行赚走A股42%净利 总市值仅占1/8</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927331.md#1">印度疫情肆虐 中资在印手机厂产能下跌40%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927433.md#1">传腾讯与CFIUS磋商 冀保留2家美游戏公司股权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12927025.md#1">五大驱动力重塑中欧关系 欧盟对中共更强硬</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12930056.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2017/10/1710131427272378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12930056.md#1">美国南卡州众议会通过决议案 支持友台抗共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12929990.md#1">法国参议院一致通过挺台参与国际 史上首次</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12929963.md#1">抓内鬼？南方电网巡视组副组长郭可青落马</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929628.md#1">中国温室气体2019排放量超过发达国家总和</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929418.md#1">五角大楼将击落失控长征火箭？防长回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929361.md#1">布林肯称西方国家须谨慎于中共投资</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926688-GettyImages-1232681331-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1">中国侨民自曝经历 中共偷偷禁国人从印度返国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926177.md#1">京津冀等11省市再遇沙尘天气 京沪有大风</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925594.md#1">河南洛阳高铁桥附近着火 部分列车晚点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925414.md#1">五一大陆四省高速路现车祸 至少18死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925161.md#1">四川绵阳3.6级地震变10级 微博再闹乌龙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924665.md#1">8省遭暴雨 北京等机场超200架次航班取消</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929079.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/02/000_NQ99L-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929079.md#1">“中共老朋友”盖茨离婚 为何引爆大陆微博</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928256.md#1">长沙幼儿园教师踢掉男童门牙 将监视器格式化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927726.md#1">爱奇艺选秀节目被停播 粉丝买奶倒奶视频热传</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927545.md#1">三退声明精选（2021/05/05）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925426.md#1">学者：中共百年之际 内外高压政权岌岌可危</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924953.md#1">成都男子长期吃生肉 脑内长满虫子</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12925442-yanghui2FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1">律师详析刑法300条：制造冤案 应予废除（下）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924988.md#1">律师详析刑法300条：制造冤案 应予废除（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12922204.md#1">党媒宣扬教师出资给留守儿童改善伙食 挨轰</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920900.md#1">台湾诗人管管跌倒昏迷辞世 享寿92岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919925.md#1">古天乐黑人替身照热传 影片监制曝秘辛</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918565.md#1">美下周恢复中国学生签证处理 部分专业受限</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929490.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/03/IMG_1158-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929490.md#1">法新社“世纪病毒始于武汉”等文获人权新闻奖</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928498.md#1">中共打压外卖骑士联盟 推“模范外卖员”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926843.md#1">四川大学生家遭强拆 父子睡在废墟上</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926001.md#1">牛腾宇首见母亲曝黑幕 坚信真相会大白天下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926601.md#1">《马三家来信》网上放映会 中共奴工产品再成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924228.md#1">成都近八旬法轮功学员遭冤判两年 劫入监狱</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12929763.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/10/GettyImages-491744168-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12929763.md#1">义乌外贸被冻卡事件 揭业者使用地下钱庄原因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929183.md#1">浑水创始人吁除牌中概股 以根除诈欺行为</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928199.md#1">A股三大股指收跌 疫苗股重挫致创指跌2.48%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927932.md#1">38家银行赚走A股42%净利 总市值仅占1/8</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927331.md#1">印度疫情肆虐 中资在印手机厂产能下跌40%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927433.md#1">传腾讯与CFIUS磋商 冀保留2家美游戏公司股权</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12930239.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12930239.md#1">发帖称青年正睡觉 腾讯公关总监张军惹众怒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12930056.md#1">美国南卡州众议会通过决议案 支持友台抗共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12929990.md#1">法国参议院一致通过挺台参与国际 史上首次</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/7/n12929963.md#1">抓内鬼？南方电网巡视组副组长郭可青落马</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929628.md#1">中国温室气体2019排放量超过发达国家总和</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929418.md#1">五角大楼将击落失控长征火箭？防长回应</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926688-GettyImages-1232681331-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1">中国侨民自曝经历 中共偷偷禁国人从印度返国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926177.md#1">京津冀等11省市再遇沙尘天气 京沪有大风</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925594.md#1">河南洛阳高铁桥附近着火 部分列车晚点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925414.md#1">五一大陆四省高速路现车祸 至少18死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925161.md#1">四川绵阳3.6级地震变10级 微博再闹乌龙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924665.md#1">8省遭暴雨 北京等机场超200架次航班取消</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929079.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/02/000_NQ99L-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12929079.md#1">“中共老朋友”盖茨离婚 为何引爆大陆微博</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928256.md#1">长沙幼儿园教师踢掉男童门牙 将监视器格式化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927726.md#1">爱奇艺选秀节目被停播 粉丝买奶倒奶视频热传</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927545.md#1">三退声明精选（2021/05/05）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925426.md#1">学者：中共百年之际 内外高压政权岌岌可危</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924953.md#1">成都男子长期吃生肉 脑内长满虫子</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12925442-yanghui2FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1">律师详析刑法300条：制造冤案 应予废除（下）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924988.md#1">律师详析刑法300条：制造冤案 应予废除（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12922204.md#1">党媒宣扬教师出资给留守儿童改善伙食 挨轰</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920900.md#1">台湾诗人管管跌倒昏迷辞世 享寿92岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919925.md#1">古天乐黑人替身照热传 影片监制曝秘辛</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918565.md#1">美下周恢复中国学生签证处理 部分专业受限</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/27/n12909575.md#1">【独家】中共推光伏产业 拜登堕气候陷阱</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/19/n12888922.md#1">【独家】文件爆西藏部队缺疫苗向河北求援</a><br>
 <a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/4/n12857876.md#1">【独家】联合国“移民网络”项目引担忧</a><br>
